# CaloPointFlow

./: .gitignore  README.md  generate.py  generate_conf.yaml  pyproject.toml  requirements
calopointflow/: __main__.py  ablation.py  data.py  generate.py  model.py  plot.py  train.py
calopointflow/configs/: base.yaml  d2_I.yaml  d2_II.yaml  d2_dsf.yaml  d2_dsf_3d.yaml  d2_dsf_cdeq.yaml  d3_I.yaml  d3_II.yaml  d3_dsf.yaml  d3_dsf_cdeq.yaml  dataset_1_photons.yaml  dataset_1_pions.yaml
calopointflow/freezables/: __init__.py  dequantization.py  freezable.py  freeze_module.py  min_max_scale.py  normalize.py
calopointflow/modules/: __init__.py  deep_sets.py  deepset_flow.py  encoder.py  linear.py  neural_spline_coupling_flow.py
calopointflow/utils/: __init__.py  load.py  nested.py  scatter.py  transform.py
configs/: CLIC_config.yaml  HFBS_config.yaml  calochallenge_2_config.yaml
src/calohitflow/: __init__.py  __main__.py  model.py  point_clouds.py
src/calohitflow/modules/: __init__.py  encoder.py  flow.py  point_flow.py
src/calohitflow/utils/: preprocess.py
