
[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["calopointflow"]

[project]
name = "CaloPointFlow"
version = "0.0.0"
description = "Generating calorimeter showers point by point"
readme = "README.md"
authors = [{ name = "Simon Schnake", email = "author_last_name.author_first_name@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Deep Learning", "Bayesian Inference", "Statistical Modeling", "Variational Inference", "PyTorch", "Normalizing Flows"]
dependencies = ["torch", 'tomli; python_version < "3.11"']
requires-python = ">=3.9"

    [project.optional-dependencies]
    dev   = ["black", "isort", "mypy", "pytest"]

    [project.scripts]
    calopointflow = "calopointflow.__main__:cli"    

    [project.urls]
    repository    = "https://github.com/"
